--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
 anyio==3.6.2
-click==8.1.3
+click==7.0
 colorama==0.4.6
-fastapi==0.94.1
+fastapi==fastapi==0.63.0
 h11==0.14.0
 httptools==0.5.0
 idna==3.4
 joblib==1.2.0
 numpy==1.21.6
 pandas==1.3.5
-pydantic==1.7.3
+pydantic==1.7.4
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 pytz==2020.4
@@ -17,9 +17,9 @@ scikit-learn==0.23.2
 scipy==1.5.4
 six==1.15.0
 sniffio==1.2.0
-starlette==0.14.2
+starlette==0.13.6
 threadpoolctl==2.1.0
 typing_extensions==3.7.4.3
-uvicorn==0.13.4
+uvicorn==0.11.8
 watchfiles==0.18.0
 websockets==8.1
